--- a/nx2/blocks/chat/chat.css
+++ b/nx2/blocks/chat/chat.css
@@ -22,6 +22,9 @@
     font-family: inherit;
   }
 
+  path {
+    fill: currentcolor;
+  }
 
   textarea {
     resize: none;
@@ -29,7 +32,6 @@
     outline: none;
   }
 }
-
 
 .chat-messages-container {
   flex: 1 1 0;
